--- a/public/output.css
+++ b/public/output.css
@@ -550,18 +550,6 @@ video {
   top: 1.5rem;
 }
 
-.bottom-40 {
-  bottom: 10rem;
-}
-
-.bottom-60 {
-  bottom: 15rem;
-}
-
-.bottom-52 {
-  bottom: 13rem;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -590,12 +578,9 @@ video {
   margin: 1.75rem;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
-.m-20 {
-  margin: 5rem;
+.mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 .mx-2 {
@@ -613,24 +598,14 @@ video {
   margin-right: 2rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 }
 
-.mx-16 {
-  margin-left: 4rem;
-  margin-right: 4rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-4 {
@@ -647,6 +622,10 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .box-border {
@@ -685,8 +664,8 @@ video {
   height: 5rem;
 }
 
-.h-3\/4 {
-  height: 75%;
+.h-32 {
+  height: 8rem;
 }
 
 .h-5\/6 {
@@ -701,8 +680,8 @@ video {
   height: 100%;
 }
 
-.w-1\/12 {
-  width: 8.333333%;
+.h-14 {
+  height: 3.5rem;
 }
 
 .w-1\/2 {
@@ -733,6 +712,10 @@ video {
   width: 3rem;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -757,16 +740,20 @@ video {
   width: 100%;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
 .flex-1 {
   flex: 1 1 0%;
 }
 
 .flex-initial {
   flex: 0 1 auto;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize-none {
@@ -791,6 +778,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-2 {
@@ -835,6 +826,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -847,8 +842,8 @@ video {
   padding: 1.5rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-8 {
+  padding: 2rem;
 }
 
 .pl-2 {
